cluster/apps/networking/singularity/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: singularity
  namespace: networking
spec:
  type: ExternalName
  externalName: singularity.${LOCAL_DOMAIN}
