cluster/apps/networking/singularity/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: singularity
  namespace: networking
  annotations:
    external-dns.home.arpa/enabled: "true"
    cert-manager.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - singularity.${DOMAIN}
      secretName: singularity-tls
  rules:
    - host: singularity.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: singularity
                port:
                  number: 5001
